# apue

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SConstruct  _lvimrc  _ycm_extra_conf.py  build_mvlab.bat  build_mvlab_Debug.bat  build_mvlab_VTune.bat  configure.bat  gemnotes.txt  mvlab.code-workspace  mvlab.msvs.ps1  open_3rdtest.bat  open_apue.bat  open_depends.bat  open_iplplus.bat  open_mvlab.bat  open_opencv.bat  open_wxWidgets.bat  pack.bat  run_apue.bat  run_apue_Debug.bat  run_apue_VTune.bat  run_cv2.bat  run_cv2_Debug.bat  run_cv2_VTune.bat  setEnv.bat  setpath.bat  spam.code-workspace  spam.msvs.ps1  test_mvlab.sh  vtune.bat
Tutorial/: CMakeLists.txt
Tutorial/MathFunctions/: mysqrt.cxx
apex/modules/mvlab/: CMakeLists.txt
pyembed/: CMakeLists.txt  pragma.h  python310._pth
spam/: CMakeLists.txt  FixBundle.cmake.in  SConscript  dialogs.ui  init.cpp  menus.ui  spam.gresource.xml  spam.rc  spam_resources.c
spam/2geom/: CMakeLists.txt  SConscript  bezier-clipping.cpp  coord.cpp  geom.cpp  solve-bezier-parametric.cpp  svg-path-writer.cpp
spam/cv_hdf/: CMakeLists.txt
spam/cv_hdf/src/: hdf5.cpp
spam/helper/: CMakeLists.txt  SConscript  commondef.cpp  commondef.h  h5db.cpp  h5db.h  splivarot.cpp  splivarot.h
spam/livarot/: CMakeLists.txt  SConscript  float-line.cpp
spam/object/: object-set.h
spam/res/css/: spam.css
spam/res/help/: rect.htm
spam/stub/: CMakeLists.txt  preferences.h  style.h
spam/svg/: CMakeLists.txt  SConscript  svg-length.cpp
spam/ui/: CMakeLists.txt  SConscript  cmndef.cpp  cmndef.h  errdef.h  evts.cpp  evts.h  loc.py  pymain.cpp  spam.cpp  spam.h
spam/ui/cmds/: cmdsfwd.h  geomcmd.cpp  geomcmd.h  spamcmd.cpp  spamcmd.h  stationcmd.cpp  stationcmd.h  transcmd.cpp  transcmd.h
spam/ui/cv/: cairocanvas.cpp  cairocanvas.h  cvimagepanel.cpp  cvimagepanel.h  cvtilepanel.cpp  cvtilepanel.h  cvwidget.cpp  cvwidget.h  wxdccanvas.cpp  wxdccanvas.h
spam/ui/dlg/: openprojdlg.cpp  openprojdlg.h
spam/ui/fsm/: beziergontool.cpp  beziergontool.h  booltool.cpp  booltool.h  boxtool.cpp  boxtool.h  edittool.cpp  edittool.h  ellipsetool.cpp  ellipsetool.h  events.h  linetool.cpp  linetool.h  nodeedittool.cpp  nodeedittool.h  notool.cpp  notool.h  polygontool.cpp  polygontool.h  probetool.cpp  probetool.h  proctool.cpp  proctool.h  profiletool.cpp  profiletool.h  pyramidtool.cpp  pyramidtool.h  recttool.cpp  recttool.h  spamer.cpp  spamer.h  transformtool.cpp  transformtool.h
spam/ui/graphics/: ExternalVTKWidget.h  LinearCellDemo.cxx  disp0dmesh.cpp  disp0dmesh.h  disp1dmesh.cpp  disp1dmesh.h  disp2dmesh.cpp  disp2dmesh.h  disp3dmesh.cpp  disp3dmesh.h  dispnode.cpp  dispnode.h  disptree.cpp  disptree.h  glcamera.cpp  glcamera.h  glfwd.h  glmodeltree.cpp  glmodeltree.h  glprog.cpp  glprog.h  glshader.cpp  glshader.h  gltexture.cpp  gltexture.h  gtkglareawidget.cpp  gtkglareawidget.h  vtkExternalLight.h  vtkExternalOpenGLCamera.h  vtkExternalOpenGLRenderWindow.h  vtkExternalOpenGLRenderer.h
spam/ui/imgproc/: basetmpl.h  basic.cpp  gradient.cpp  rgn.h  shapetmpl.cpp  shapetmpl.h
spam/ui/misc/: gtkglareawidget.cpp  gtkglareawidget.h  histwidget.cpp  histwidget.h  instructiontip.cpp  instructiontip.h  percentvalidator.cpp  percentvalidator.h  scopedtimer.cpp  scopedtimer.h  spamutility.cpp  spamutility.h  switchbtn.cpp  switchbtn.h  thumbnailctrl.cpp  thumbnailctrl.h
spam/ui/proc/: basetmpl.cpp  basetmpl.h  basic.cpp  basic.h  gradient.cpp  gradient.h  pixeltmpl.cpp  pixeltmpl.h  rgn.cpp  rgn.h  shapetmpl.cpp  shapetmpl.h
spam/ui/procflow/: cvtstep.cpp  cvtstep.h  endstep.cpp  endstep.h  flowchart.cpp  flowchart.h  initstep.cpp  initstep.h  stepbase.cpp  stepbase.h  stepfwd.h  threshstep.cpp  threshstep.h
spam/ui/projs/: beziergonnode.cpp  beziergonnode.h  drawablenode.cpp  drawablenode.h  drawstyle.cpp  drawstyle.h  ellipsenode.cpp  ellipsenode.h  fixednode.cpp  fixednode.h  geomnode.cpp  geomnode.h  linenode.cpp  linenode.h  modelfwd.h  modelnode.cpp  modelnode.h  nodefactory.cpp  nodefactory.h  polygonnode.cpp  polygonnode.h  profilenode.cpp  profilenode.h  projnode.cpp  projnode.h  projtreemodel.cpp  projtreemodel.h  rectnode.cpp  rectnode.h  stationnode.cpp  stationnode.h  stylecellrenderer.cpp  stylecellrenderer.h
spam/ui/scripting/: mvlabcaster.cpp  mvlabcaster.h  pydrawable.cpp  pydrawable.h  pyellipse.cpp  pyellipse.h  pyentity.cpp  pyentity.h  pyfixed.cpp  (+7 more)
spam/unittest/: CMakeLists.txt  cv_match_gtest.cpp  cvperf_unittest.cpp  ensmallen_gtest.cpp  helper.cpp  helper.h  pixeltmpl_unittest.cpp  rgn_gtest.cpp  rgn_unittest.cpp  shapetmpl_unittest.cpp  simd_gtest.cpp  simdperf_unittest.cpp  vcl_unittest.cpp
spam/util/: CMakeLists.txt  SConscript  units.cpp  unordered-containers.h
test/: CMakeLists.txt  SConscript  __init__.py  extradata.py  genperfplot.py  pytest.code-workspace  report_template.html  run.py  test.pyproj  test.sln  test_Debug.py  test_file.cpp  unittest.code-workspace  vtune.py  wrapsizer.cpp
test/contour/: test_Contour.py  test_ContourArea.py  test_ContourConvexHull.py  test_ContourConvexHullAndrew.py  test_ContourConvexHullMelkman.py  test_ContourConvexHullSklansky.py  test_ContourCreate.py  test_ContourDiameter.py  test_ContourFeatures.py  test_ContourMinAreaRect.py  test_ContourMoment.py  test_ContourWkt.py  test_Persistence.py
test/demo/: SampleFilterFuzz.cpp  StopWatch.cpp  hellopy.cpp  main.cpp  ustring.cpp
test/matching/: test_ContourTemplate.py  test_PixelTemplate.py
test/morphology/: test_Closing.py  test_Dilation.py  test_Erosion.py  test_Opening.py
test/persistence/: test_Mat.py  test_Template.py
test/region/: test_Area.py  test_Complement.py  test_Connection.py  test_Create.py  test_CrossVerify.py  test_Difference.py  test_Intersection.py  test_Misc.py  test_Persistence.py  test_RegionFeatures.py  test_StructuringElement.py  test_SymmDifference.py  test_Test.py  test_Transformation.py  test_Union.py
test/threshold/: test_Threshold.py
test/unittest/: CMakeLists.txt  CopyDependencies.cmake.in  helper.cpp  helper.h  region_gtest.cpp  region_misc_gtest.cpp  region_morph_gtest.cpp
(+303 files in other folders)
