cmake_minimum_required(VERSION 3.12.1)
project(apue)
enable_testing()
set(CMAKE_CXX_STANDARD 17)
set_property(GLOBAL PROPERTY USE_FOLDERS ON)

if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
    get_filename_component(absInstallPath "install/${CMAKE_PROJECT_NAME}" ABSOLUTE BASE_DIR "${CMAKE_CURRENT_LIST_DIR}")
    set(CMAKE_INSTALL_PREFIX "${absInstallPath}" CACHE PATH "Install path prefix" FORCE)
endif(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)

set(SKIA_ROOT "${CMAKE_CURRENT_LIST_DIR}/install/skia")
set(wxWidgets_ROOT_DIR "${CMAKE_CURRENT_LIST_DIR}/install/wxWidgets")
set(wxWidgets_LIB_DIR "${CMAKE_CURRENT_LIST_DIR}/install/wxWidgets/lib/vc_x64_dll")
set(WXSVG_ROOT "${CMAKE_CURRENT_LIST_DIR}/install/wxSVG")
set(OpenCV_DIR "${CMAKE_CURRENT_LIST_DIR}/install/OpenCV")
set(ASMLIB_ROOT "${CMAKE_CURRENT_LIST_DIR}/install/asmlib")
set(SIMD_ROOT "${CMAKE_CURRENT_LIST_DIR}/install/simd")
set(OpenBLAS_ROOT "${CMAKE_CURRENT_LIST_DIR}/install/OpenBLAS")
set(Lib2Geom_ROOT "${CMAKE_CURRENT_LIST_DIR}/install/lib2geom")
set(wxWidgets_EXCLUDE_COMMON_LIBRARIES TRUE)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
if(MSVC)
    add_compile_definitions($<$<CONFIG:Debug>:_DEBUG>)
    add_definitions(-DUNICODE -D_UNICODE -U_MBCS)
endif()

include(${CMAKE_CURRENT_LIST_DIR}/cmake/ConfigChecks.cmake)

find_package(ICU REQUIRED i18n data io uc)
find_package(Boost REQUIRED locale system thread python37 chrono filesystem unit_test_framework)
find_package(Python3 REQUIRED Development)
find_package(wxWidgets REQUIRED COMPONENTS base core adv aui html media xrc gl qa richtext stc ribbon propgrid webview)
find_package(WXSVG REQUIRED)
find_package(OpenCV REQUIRED core imgproc imgcodecs)
find_package(ASMLIB REQUIRED)
find_package(SIMD REQUIRED)
find_package(OpenBLAS REQUIRED)
find_package(Lib2Geom REQUIRED)
find_package(TBB CONFIG REQUIRED tbb tbbmalloc)
find_package(unofficial-cairo CONFIG REQUIRED)
find_package(unofficial-glib CONFIG REQUIRED)
find_package(hdf5 CONFIG REQUIRED)
find_package(GLIBMM REQUIRED)
find_package(CAIROMM REQUIRED)
find_package(GTest CONFIG REQUIRED)
find_package(libsigcpp CONFIG REQUIRED)
find_package(GSL REQUIRED)
find_package(double-conversion CONFIG REQUIRED)
find_package(EXPAT REQUIRED)
find_package(EXIF REQUIRED)

#add_subdirectory(test)
add_subdirectory(spam)