add_compile_options("/utf-8")
add_executable(test WIN32 wrapsizer.cpp ustring.cpp)
add_executable(SampleFilterFuzz main.cpp)

file(GLOB cameraSrc Camera/*.cpp Camera/*.hpp)
add_executable(Camera ${cameraSrc})
add_library(hellopy SHARED hellopy.cpp)

set(libs)
list(APPEND libs ZLIB::ZLIB)
list(APPEND libs BZip2::BZip2)
list(APPEND libs PNG::PNG)
list(APPEND libs Freetype::Freetype)
list(APPEND libs Pixman::Pixman)
list(APPEND libs "sigc-3.0")
list(APPEND libs EXPAT::EXPAT)
list(APPEND libs PCRE::pcre)
list(APPEND libs PCRE::pcre16)
list(APPEND libs PCRE::pcre32)
list(APPEND libs LIBLZMA::LIBLZMA)
list(APPEND libs JPEG::jpeg)
list(APPEND libs JPEG::turbo)
list(APPEND libs GLUT::GLUT)
list(APPEND libs TIFF::TIFF)
list(APPEND libs Iconv::Iconv)
list(APPEND libs Iconv::charset)
list(APPEND libs FFI::FFI)
list(APPEND libs Intl::Intl)
list(APPEND libs GLIB::glib)
list(APPEND libs GLIB::gobject)
list(APPEND libs GLIBMM::glibmm)
list(APPEND libs GLIBMM::giomm)
list(APPEND libs FontConfig::FontConfig)
list(APPEND libs CAIRO::cairo)
list(APPEND libs CAIRO::gobject)
list(APPEND libs SKIA::skia)
list(APPEND libs SKIA::pathkit)
list(APPEND libs CAIROMM::CAIROMM)
list(APPEND libs TBB::tbb)
list(APPEND libs pstl::ParallelSTL)
list(APPEND libs GSL::gsl)
list(APPEND libs GSL::gslcblas)
list(APPEND libs szip-static)
list(APPEND libs hdf5::hdf5_cpp-static)
list(APPEND libs hdf5::hdf5_hl_cpp-static)
list(APPEND libs ICU::i18n)
list(APPEND libs ICU::io)
list(APPEND libs ICU::uc)
list(APPEND libs Boost::locale)
list(APPEND libs Boost::system)
list(APPEND libs Boost::thread)
list(APPEND libs Boost::chrono)
list(APPEND libs OpenCL::OpenCL)
list(APPEND libs opencv_core)
list(APPEND libs opencv_imgcodecs)

target_link_libraries(test PRIVATE ${libs})
target_link_libraries(SampleFilterFuzz PRIVATE ${libs})
target_link_libraries(hellopy PRIVATE Python2::Python Boost::python27 Boost::chrono OpenCL::OpenCL)
target_include_directories(Camera PRIVATE ${Boost_INCLUDE_DIRS})

target_include_directories(test PRIVATE ${wxWidgets_INCLUDE_DIRS})
target_compile_definitions(test PRIVATE ${wxWidgets_DEFINITIONS})
target_compile_definitions(test PRIVATE $<$<CONFIG:Debug>:${wxWidgets_DEFINITIONS_DEBUG}>)
target_compile_options(test PRIVATE ${wxWidgets_CXX_FLAGS})
target_link_libraries(test PRIVATE ${wxWidgets_LIBRARIES})

if(MSVC)
  target_compile_definitions(test PUBLIC _USE_MATH_DEFINES _SILENCE_CXX17_UNCAUGHT_EXCEPTION_DEPRECATION_WARNING _SCL_SECURE_NO_WARNINGS _CRT_SECURE_NO_WARNINGS __NO_VC_CRTDBG__)
  target_compile_definitions(hellopy PRIVATE BOOST_PYTHON_STATIC_LIB BOOST_PYTHON_STATIC_MODULE PY_MAJOR_VERSION=2 PY_MINOR_VERSION=7)
endif()

set_target_properties(hellopy PROPERTIES SUFFIX ".pyd")

get_filename_component(GLIB_RUNTIME_DIR "${GLIB_INCLUDE_DIR}" DIRECTORY)
set(CMAKE_MSVCIDE_RUN_PATH "${GLIB_RUNTIME_DIR}/bin")
get_filename_component(TBB_RUNTIME_DIR "${TBB_DIR}" DIRECTORY)

set_target_properties(test PROPERTIES DEBUG_POSTFIX "_debug")
set_target_properties(test PROPERTIES RELWITHDEBINFO_POSTFIX "_relwithdebinfo")
set_target_properties(test PROPERTIES MINSIZEREL_POSTFIX "_minsizerel")

include(GNUInstallDirs)
install(TARGETS test DESTINATION ${CMAKE_INSTALL_BINDIR})
install(TARGETS hellopy DESTINATION ${CMAKE_INSTALL_BINDIR})
if(MSVC)
    install(FILES $<TARGET_PDB_FILE:test> DESTINATION "${CMAKE_INSTALL_BINDIR}" OPTIONAL)
    install(FILES $<TARGET_PDB_FILE:hellopy> DESTINATION "${CMAKE_INSTALL_BINDIR}" OPTIONAL)
endif()

add_custom_command(TARGET test POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:GLIB::glib> $<TARGET_FILE_DIR:test>)
add_custom_command(TARGET test POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:GLIB::gobject> $<TARGET_FILE_DIR:test>)
add_custom_command(TARGET test POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:TBB::tbb> $<TARGET_FILE_DIR:test>)
add_custom_command(TARGET test POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:OpenCL::OpenCL> $<TARGET_FILE_DIR:test>)
add_custom_command(TARGET test POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:opencv_core> $<TARGET_FILE_DIR:test>)
#add_custom_command(TARGET test POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:ICU::uc> $<TARGET_FILE_DIR:test>)